force-app/main/default/objects/Session_Attachment__c/fields/Attachment_Type__c.field-meta.xml
<CustomField>
    <fullName>Attachment_Type__c</fullName>
    <label>Attachment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Note</fullName>
                <label>NOTE</label>
            </value>
            <value>
                <fullName>Assessment</fullName>
                <label>ASSESSMENT</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>