force-app/main/default/objects/Session_Attachment__c/fields/CE_Session__c.field-meta.xml
<CustomField>
    <fullName>CE_Session__c</fullName>
    <label>CE-Session</label>
    <referenceTo>CE_Session__c</referenceTo>
    <relationshipLabel>Session Attachments</relationshipLabel>
    <relationshipName>Session_Attachments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>