force-app/main/default/objects/Session_Attachment__c/fields/Course_Update__c.field-meta.xml
<CustomField>
    <fullName>Course_Update__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Course Update</label>
    <referenceTo>Course_Update__c</referenceTo>
    <relationshipLabel>Session Attachments</relationshipLabel>
    <relationshipName>Session_Attachments</relationshipName>
    <type>Lookup</type>
</CustomField>