force-app/main/default/objects/Session_Attachment__c/fields/FILE_URL__c.field-meta.xml
<CustomField>
    <fullName>FILE_URL__c</fullName>
    <label>File URL</label>
    <type>Url</type>
</CustomField>