force-app/main/default/objects/Session_Attachment__c/fields/Uploaded_By__c.field-meta.xml
<CustomField>
    <fullName>Uploaded_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Uploaded By(contact)</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Session Attachments</relationshipLabel>
    <relationshipName>Session_Attachments</relationshipName>
    <type>Lookup</type>
</CustomField>