force-app/main/default/objects/Session_Attachment__c/fields/Video_Id__c.field-meta.xml
<CustomField>
    <fullName>Video_Id__c</fullName>
    <label>Video Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>