force-app/main/default/objects/Session_Attachment__c/recordTypes/Note.recordType-meta.xml
<RecordType>
    <fullName>Note</fullName>
    <active>true</active>
    <description>Record Type denotes session notes uploaded by Mentor</description>
    <label>Note</label>
</RecordType>