force-app/main/default/objects/Session_Attachment__c/listViews/Session_s_Attachment.listView-meta.xml
<ListView>
    <fullName>Session_s_Attachment</fullName>
    <columns>NAME</columns>
    <columns>Attachment_Type__c</columns>
    <columns>CE_Session__c</columns>
    <columns>Course_Update__c</columns>
    <columns>File_Type__c</columns>
    <columns>FILE_URL__c</columns>
    <columns>Uploaded_By__c</columns>
    <filterScope>Everything</filterScope>
    <label>Session&apos;s Attachment</label>
</ListView>